feat/tested brute solution

--- a/src/validation/experimental_analysis.ipynb
+++ b/src/validation/experimental_analysis.ipynb
@@ -10,8 +10,7 @@
     "## Objetivos:\n",
     "1. Comparar calidad de solución (eficiente vs óptima)\n",
     "2. Analizar tiempos de ejecución\n",
-    "3. Determinar límite resolutivo de fuerza bruta\n",
-    "4. Identificar patrones de comportamiento"
+    "3. Determinar límite resolutivo de fuerza bruta"
    ]
   },
   {
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "f65660bc",
    "metadata": {},
    "outputs": [],
@@ -37,10 +36,7 @@
     "import seaborn as sns\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "from sklearn.metrics import r2_score\n",
-    "from scipy import stats\n",
+    "from concurrent.futures import ThreadPoolExecutor, TimeoutError\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -71,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "e17b2b66",
    "metadata": {},
    "outputs": [],
@@ -92,15 +88,37 @@
     "            seed=seed\n",
     "        )\n",
     "        \n",
-    "        # Medir tiempo y ejecutar fuerza bruta\n",
-    "        start = time.time()\n",
-    "        brute_result = solve_brute_force(*instance)\n",
-    "        brute_time = time.time() - start\n",
+    "        # Solo 3 líneas de código para ejecutar con timeout\n",
+    "        ejecutor = ThreadPoolExecutor()\n",
+    "        futuro = ejecutor.submit(solve_brute_force, *instance)\n",
+    "        timeout = False\n",
     "        \n",
+    "        try:\n",
+    "            start = time.time()\n",
+    "            brute_result = futuro.result(timeout=60)\n",
+    "            brute_time = time.time() - start\n",
+    "        except TimeoutError:\n",
+    "            futuro.cancel()\n",
+    "            timeout = True            \n",
+    "        ejecutor.shutdown(wait=False)\n",
+    "                \n",
     "        # Medir tiempo y ejecutar algoritmo eficiente\n",
     "        start = time.time()\n",
     "        efficient_result = solve_efficient(*instance)\n",
     "        efficient_time = time.time() - start\n",
+    "        \n",
+    "        if timeout:\n",
+    "            return {\n",
+    "                'num_ports': num_ports,\n",
+    "                'num_items': num_items,\n",
+    "                'seed': seed,\n",
+    "                'brute_time': 60,\n",
+    "                'efficient_time': efficient_time,\n",
+    "                'brute_value': None,\n",
+    "                'efficient_value': efficient_result,\n",
+    "                'quality_ratio': None,\n",
+    "                'timeout': True\n",
+    "            }\n",
     "        \n",
     "        # Calcular calidad relativa\n",
     "        if brute_result != 0:\n",
@@ -119,7 +137,8 @@
     "            'quality_ratio': quality_ratio,\n",
     "            'time_ratio': brute_time / efficient_time if efficient_time > 0 else float('inf'),\n",
     "            'is_optimal': efficient_result == brute_result,\n",
-    "            'instance_size': num_ports * num_items\n",
+    "            'instance_size': num_ports * num_items,\n",
+    "            'timeout': False\n",
     "        }\n",
     "    \n",
     "    def run_experiment_batch(self, num_ports_list, num_items_list, repetitions=30, timeout=300):\n",
@@ -135,25 +154,8 @@
     "                        seed = num_ports * 1000 + num_items * 100 + rep\n",
     "                        \n",
     "                        try:\n",
-    "                            # Timeout para fuerza bruta\n",
-    "                            if num_ports * num_items > 20:  # Umbral heurístico\n",
-    "                                result = {\n",
-    "                                    'num_ports': num_ports,\n",
-    "                                    'num_items': num_items,\n",
-    "                                    'seed': seed,\n",
-    "                                    'brute_time': timeout,\n",
-    "                                    'efficient_time': 0,\n",
-    "                                    'brute_value': None,\n",
-    "                                    'efficient_value': None,\n",
-    "                                    'quality_ratio': None,\n",
-    "                                    'timeout': True\n",
-    "                                }\n",
-    "                            else:\n",
-    "                                result = self.run_single_experiment(num_ports, num_items, seed)\n",
-    "                                result['timeout'] = False\n",
-    "                            \n",
+    "                            result = self.run_single_experiment(num_ports, num_items, seed)                            \n",
     "                            results.append(result)\n",
-    "                            \n",
     "                        except Exception as e:\n",
     "                            print(f\"Error en {num_ports} puertos, {num_items} items: {e}\")\n",
     "                        \n",
@@ -345,8 +347,8 @@
     "print(f\"Esto corresponde aproximadamente a:\")\n",
     "print(f\"  - {num_ports_fixed} puertos × {max_reasonable_size // num_ports_fixed} ítems\")\n",
     "print(f\"\\nPara instancias mayores:\")\n",
-    "print(f\"  - Tiempo promedio FB: {results_fixed_ports[results_fixed_ports['instance_size'] > max_reasonable_size]['brute_time'].mean():.1f}s\")\n",
-    "print(f\"  - Tiempo promedio eficiente: {results_fixed_ports[results_fixed_ports['instance_size'] > max_reasonable_size]['efficient_time'].mean():.3f}s\")\n"
+    "print(f\"  - Tiempo promedio FB: {results_fixed_ports[results_fixed_ports['instance_size'] >= max_reasonable_size - 5]['brute_time'].mean():.1f}s\")\n",
+    "print(f\"  - Tiempo promedio eficiente: {results_fixed_ports[results_fixed_ports['instance_size'] >= max_reasonable_size - 5]['efficient_time'].mean():.3f}s\")\n"
    ]
   },
   {
@@ -518,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
